# Virtual-power-plants

./: .gitignore  ANCILLARY_SERVICES_SUMMARY.md  README.md  main.py  organize_files.py  pyproject.toml  test_adjustable_loads.py  test_ancillary_services.py  test_cbc.py  test_complete_flow.py  test_optimization_objectives.py  test_runner.py  test_scheduling_modes.py  test_storage_constraints.py  test_storage_fix.py
config/: solver_config.yaml  system_config.yaml
docs/: IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  file_management_guide.md  optimization_modeling.md  optimization_objectives_manual.md  scheduling_modes_manual.md
examples/: demo_optimization.py
logs/: vpp_optimization.log.2025-08-26  vpp_optimization.log.2025-08-27
outputs/: ancillary_services_test_report_20250827_095833.txt  economics_analysis_20250826_180805.csv  economics_analysis_20250827_095657.csv  modes_comparison_ancillary_revenue_max_20250828_093937.txt  modes_comparison_cost_minimization_20250828_093528.txt  modes_comparison_grid_support_optimized_20250828_093955.txt  modes_comparison_profit_maximization_20250828_093920.txt  modes_comparison_report_20250827_103622.txt  modes_comparison_revenue_maximization_20250828_093847.txt  optimization_results_20250827_095505.csv  summary_report_20250826_180805.txt  summary_report_20250827_095505.txt  technical_metrics_20250826_171000.csv  technical_metrics_20250827_095657.csv  vpp_input_data_20250827_095657.csv
src/: __init__.py
tests/: __init__.py  run_tests.py  test_adjustable_loads.py  test_ancillary_services.py  test_cbc.py  test_vpp_system.py  (+3 more)
(+184 files in other folders)
